add localization ar

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -6,6 +6,7 @@
     "Add Team Member": "إضافة عضو للفريق",
     "Add": "إضافة",
     "Added.": "تمت الإضافة.",
+    "Email Address": "عنوان البريد الإلكتروني",
     "Administrator users can perform any action.": "المدراء بإمكانهم تنفيذ أي إجراء.",
     "Administrator": "المدير",
     "All of the people that are part of this team.": "جميع الأشخاص الذين هم جزء من هذا الفريق.",
@@ -146,7 +147,7 @@
     "This password reset link will expire in :count minutes.": "ستنتهي صلاحية رابط استعادة كلمة المرور خلال :count دقيقة.",
     "This user already belongs to the team.": "هذا المستخدم ينتمي بالفعل إلى الفريق.",
     "to": "إلى",
-    "Toggle navigation": "إظهار\/إخفاء القائمة",
+    "Toggle navigation": "إظهار/إخفاء القائمة",
     "Token Name": "اسم الرمز",
     "Too Many Attempts.": "عدد كبير من المحاولات.",
     "Too Many Requests": "طلبات كثيرة جدًا",
