--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -6,6 +6,7 @@
     "Add Team Member": "Add Team Member",
     "Add": "Add",
     "Added.": "Added.",
+    "Email Address": "Email Address",
     "Administrator users can perform any action.": "Administrator users can perform any action.",
     "Administrator": "Administrator",
     "All of the people that are part of this team.": "All of the people that are part of this team.",
