--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -172,5 +172,28 @@
     "You may delete any of your existing tokens if they are no longer needed.": "يمكنك حذف أي من الرموز المميزة الموجودة لديك إذا لم تعد هناك حاجة إليها.",
     "You may not delete your personal team.": "لا يمكنك حذف فريقك الشخصي.",
     "You may not leave a team that you created.": "لا يمكنك مغادرة الفريق الذي أنشأته.",
-    "Your email address is not verified.": "بريدك الإلكتروني غير موثّق."
+    "Your email address is not verified.": "بريدك الإلكتروني غير موثّق.",
+    "Title": "عنوان",
+    "Amount": "قيمة",
+    "Expire Date": "تاريخ الإنتهاء",
+    "Point": "نقطة",
+    "Membership": "عظوية",
+    "Phone Number": "رقم الهاتف",
+    "Country": "بلد",
+    "Additional Information": "بيانات إضافية",
+    "Users": "المستخدمين",
+    "Card Code": "رمز البطاقة",
+    "Card Codes": "رموز البطاقة",
+    "Create Code": "إنشاء رمز",
+    "Create User": "إنشاء مستخدم",
+    "Save Changes": "حفظ التغييرات",
+    "Allowed Locale": "اللغة المسموح بها",
+    "Serial Number": "رقم سري",
+    "Serial Type": "نوع المسلسل",
+    "Serial Date": "تاريخ المسلسل",
+    "Link": "حلقة الوصل",
+    "Last Seen": "اخر ظهور",
+    "Action Points": "نقاط العمل",
+    "Resources": "المصادر",
+    "Locale": "اللغة"
 }
