--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -172,5 +172,28 @@
     "You may delete any of your existing tokens if they are no longer needed.": "You may delete any of your existing tokens if they are no longer needed.",
     "You may not delete your personal team.": "You may not delete your personal team.",
     "You may not leave a team that you created.": "You may not leave a team that you created.",
-    "Your email address is not verified.": "Your email address is not verified."
+    "Your email address is not verified.": "Your email address is not verified.",
+    "Title": "Title",
+    "Amount": "Amount",
+    "Expire Date": "Expire Date",
+    "Point": "Point",
+    "Membership": "Membership",
+    "Phone Number": "Phone Number",
+    "Country": "Country",
+    "Additional Information": "Additional Information",
+    "Users": "Users",
+    "Card Code": "Card Code",
+    "Create Code": "Create Code",
+    "Create Codes": "Create Codes",
+    "Create User": "Create User",
+    "Save Changes": "Save Changes",
+    "Allowed Locale": "Allowed Locale",
+    "Serial Number": "Serial Number",
+    "Serial Type": "Serial Type",
+    "Serial Date": "Serial Date",
+    "Link": "Link",
+    "Last Seen": "Last Seen",
+    "Action Points": "Action Points",
+    "Resources": "Resources",
+    "Locale": "Locale"
 }
