add en locale to landingpage

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -195,5 +195,109 @@
     "Last Seen": "Last Seen",
     "Action Points": "Action Points",
     "Resources": "Resources",
-    "Locale": "Locale"
+    "Locale": "Locale",
+    "Hercules": "Hercules",
+    "Hercules Projects": "Hercules Projects",
+    "“ Legends are born to achieve greatness ”": "“ Legends are born to achieve greatness ”",
+	"Products": "Products",
+	"Watch Video": "Watch Video",
+	"Client Area": "Client Area",
+	"Home": "Home",
+	"About Us": "About Us",
+	"Our Features": "Our Features",
+	"Pricing": "Pricing",
+	"FAQ": "FAQ",
+	"Contact Us": "Contact Us",
+	"Explore Our Services": "Explore Our Services",
+	"Marketing Softwares": "Marketing Softwares",
+	"We specialize in programming marketing tools on all social media platforms and we have very great experience in dealing with these platforms, using the latest technologies in the tools.": "We specialize in programming marketing tools on all social media platforms and we have very great experience in dealing with these platforms, using the latest technologies in the tools.",
+	"Build Softwares": "Build Softwares",
+	"We develop custom softwares and technology uses the latest programming frameworks to develop desktop softwares which enables us to implement powerful softwares.": "We develop custom softwares and technology uses the latest programming frameworks to develop desktop softwares which enables us to implement powerful softwares.",
+	"Obfuscate .NET": "Obfuscate .NET",
+	"Keep Decompilers At Bay Forever With Our Rock-Solid Multi-Purpose Obfuscation Engines, Prevent external and internal modifications using anti tampering techniques.": "Keep Decompilers At Bay Forever With Our Rock-Solid Multi-Purpose Obfuscation Engines, Prevent external and internal modifications using anti tampering techniques.",
+	"We strive to satisfy our customers": "We strive to satisfy our customers",
+	"Our most important goal is to provide the best services to our customers.": "Our most important goal is to provide the best services to our customers.",
+	"Professional Team": "Professional Team",
+	"Support Center": "Support Center",
+	"Periodically Updates": "Periodically Updates",
+	"High Quality, With Low Price": "High Quality, With Low Price",
+	"Our Softwares Supporting Many Languages": "Our Softwares Supporting Many Languages",
+	"Attractive Offers For Companies": "Attractive Offers For Companies",
+	"Different Packages For Individuals": "Different Packages For Individuals",
+	"Affiliate System": "Affiliate System",
+	"Our Clients": "Our Clients",
+	"Developed": "Developed",
+	"Our Projects": "Our Projects",
+	"World Data": "World Data",
+	"Videos": "Videos",
+	"Our Tutorials": "Our Tutorials",
+	"Our Products": "Our Products",
+	"Our Latest Projects": "Our Latest Projects",
+	"300+ Marketing tools": "300+ Marketing tools",
+	"Hercules Whatsapp Sender": "Hercules Whatsapp Sender",
+	"Marketing using whatsapp": "Marketing using whatsapp",
+	"Hercules Mailer Sender": "Hercules Mailer Sender",
+	"Send Emails to your clients easily": "Send Emails to your clients easily",
+	"Hercules OLX Extractor": "Hercules OLX Extractor",
+	"Extract fresh ads from olx": "Extract fresh ads from olx",
+	"Hercules Yellow Pages": "Hercules Yellow Pages",
+	"Collect companies in seconds": "Collect companies in seconds",
+	"To view more products": "To view more products",
+	"Individuals Memberships": "Individuals Memberships",
+	"Bronze": "Bronze",
+	"Silver": "Silver",
+	"GOLD / VIP": "GOLD / VIP",
+	"3 Months membership, and all access for the website and desktop-app.": "3 Months membership, and all access for the website and desktop-app.",
+	"6 Months membership, and all access for the website and desktop-app.": "6 Months membership, and all access for the website and desktop-app.",
+	"1 Year membership, and all access for the website and desktop-app.": "1 Year membership, and all access for the website and desktop-app.",
+	"EGP": "EGP",
+	"Months": "Months",
+	"Year": "Year",
+	"Serial": "Serial",
+	"Points": "Points",
+	"Website Tools": "Website Tools",
+	"E-Marketing App 300+ Tools": "E-Marketing App 300+ Tools",
+	"206M Data from facebook": "206M Data from facebook",
+	"Everyday Support": "Everyday Support",
+	"Choose this plan": "Choose this plan",
+	"Are you asking for companies packages?": "Are you asking for companies packages?",
+	"We offer multi-serial users and bulk points for companies": "We offer multi-serial users and bulk points for companies",
+	"Asked Question": "Asked Question",
+	"Frequently Ask Question": "Frequently Ask Question",
+	"Can you give me an overview of Hercules Projects?": "Can you give me an overview of Hercules Projects?",
+	"Hercules Projects is an Egyptian company specialized in the manufacture and development of software applications, launched in 2018, based in Egypt and consists of a team of Egyptian entrepreneurs.": "Hercules Projects is an Egyptian company specialized in the manufacture and development of software applications, launched in 2018, based in Egypt and consists of a team of Egyptian entrepreneurs.",
+	"What are the products and services offered?": "What are the products and services offered?",
+	"The products that we provide such as E-marketing programs, also we implement special programs for individuals and companies on demand, and the services we provide such as encryption and protection service for desktop programs with the latest encryption programs used.": "The products that we provide such as E-marketing programs, also we implement special programs for individuals and companies on demand, and the services we provide such as encryption and protection service for desktop programs with the latest encryption programs used.",
+	"You can also check our current products and services via our website or contact us on": "You can also check our current products and services via our website or contact us on",
+	"Facebook page": "Facebook page",
+	"and WhatsApp": "and WhatsApp",
+	"What are the advantages that motivate me to buy any of your programs?": "What are the advantages that motivate me to buy any of your programs?",
+	"We offer the best quality and lowest price, different memberships suitable for everyone, full explanations of all our programs in detail, continuous workshops, continuous updates, technical support all the day, customer support and assistance in all ways, and give our customers gifts, contests and surprises.": "We offer the best quality and lowest price, different memberships suitable for everyone, full explanations of all our programs in detail, continuous workshops, continuous updates, technical support all the day, customer support and assistance in all ways, and give our customers gifts, contests and surprises.",
+	"How can I purchase your software and payment methods?": "How can I purchase your software and payment methods?",
+	"You can get any of our programs by contact with us on Facebook page or via WhatsApp only, and we have more than one payment method inside or outside Egypt (Paypal- Western Union - Bank Transfer - Vodafone Cash).": "You can get any of our programs by contact with us on Facebook page or via WhatsApp only, and we have more than one payment method inside or outside Egypt (Paypal- Western Union - Bank Transfer - Vodafone Cash).",
+	"I want to know more details about your programs and the duration of the subscription?": "I want to know more details about your programs and the duration of the subscription?",
+	"Contact with us on Facebook page or WhatsApp, and you will be provided with all the details and the duration of subscriptions.": "Contact with us on Facebook page or WhatsApp, and you will be provided with all the details and the duration of subscriptions.",
+	"Are there special offers for companies?": "Are there special offers for companies?",
+	"Yes, of course, there are special offers for companies and support in prices and subscriptions": "Yes, of course, there are special offers for companies and support in prices and subscriptions",
+	"Is there a free trial period for the programs?": "Is there a free trial period for the programs?",
+	"There is no free trial period, you can see explanations of the program or enter directly with us on anydesk or teamviewer and try the program by yourself.": "There is no free trial period, you can see explanations of the program or enter directly with us on anydesk or teamviewer and try the program by yourself.",
+	"Do you have an affiliate marketing system?": "Do you have an affiliate marketing system?",
+	"Yes, we are pleased that you can join us and become an affiliate marketer, but you must first get the program until you master it well and then be able to market it in return for a percentage on each sale.": "Yes, we are pleased that you can join us and become an affiliate marketer, but you must first get the program until you master it well and then be able to market it in return for a percentage on each sale.",
+	"Can I be your representative in my country?": "Can I be your representative in my country?",
+	"Yes, we are honored to join us, contact us at any time.": "Yes, we are honored to join us, contact us at any time.",
+	"Testimonial": "Testimonial",
+	"What Our Clients Say": "What Our Clients Say",
+	"Facebook Review": "Facebook Review",
+	"Need Help?": "Need Help?",
+	"Social": "Social",
+	"Youtube Channel": "Youtube Channel",
+	"Whatsapp": "Whatsapp",
+	"Best digital marketing software, powerful & high quality service, 24/7 Free Support.": "Best digital marketing software, powerful & high quality service, 24/7 Free Support.",
+	"Contact": "Contact",
+	"Phone": "Phone",
+	"Address": "Address",
+	"291 st, New Maadi, Cairo, Egypt": "291 st, New Maadi, Cairo, Egypt",
+	"2020 Hercules. All Rights Reserved by": "2020 Hercules. All Rights Reserved by",
+	"Terms & Conditions": "Terms & Conditions",
+	"Privacy Policy": "Privacy Policy"
 }
