--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -199,105 +199,105 @@
     "Hercules": "Hercules",
     "Hercules Projects": "مشاريع هركليز",
     "“ Legends are born to achieve greatness ”": "“ خلقت الأساطير لتحقيق العظمة ”",
-    "Products": "برامجنا",
-    "Watch Video": "شاهدالفيديو",
-    "Client Area": "منطقة العملاء",
-    "Home": "الرئيسية",
-    "About Us": "من نحن",
-    "Our Features": "المميزات",
-    "Pricing": "الاسعار",
-    "FAQ": "الأسئلةالشائعة",
-    "Contact Us": "تواصل معنا",
-    "Explore Our Services": "تعرف على خدماتنا",
-    "Marketing Softwares": "برامج التسويق",
-    "We specialize in programming marketing tools on all social media platforms and we have very great experience in dealing with these platforms, using the latest technologies in the tools.": "نحن متخصصون في برمجة أدوات التسويق على جميع منصات التواصل الاجتماعي ولدينا خبرة كبيرة جدًا في التعامل مع هذه المنصات ، باستخدام أحدث التقنيات في الأدوات..",
-    "Build Softwares": "تنفيذ البرامج",
-    "We develop custom softwares and technology uses the latest programming frameworks to develop desktop softwares which enables us to implement powerful softwares.": "نقوم بتطوير برامج وتقنيات مخصصة تستخدم أحدث أطر البرمجة لتطوير برامج سطح المكتب التي تمكننا من تنفيذ برامج قوية..",
-    "Obfuscate .NET": "Obfuscate .NET",
-    "Keep Decompilers At Bay Forever With Our Rock-Solid Multi-Purpose Obfuscation Engines, Prevent external and internal modifications using anti tampering techniques.": "Keep Decompilers At Bay Forever With Our Rock-Solid Multi-Purpose Obfuscation Engines, Prevent external and internal modifications using anti tampering techniques.",
-    "We strive to satisfy our customers": "ندرك أن الثقة لا تقدر بثمن لذلك نسعى جاهدين لأرضاء عملائنا",
-    "Our most important goal is to provide the best services to our customers.": "أهم اهدافنا هو تقديم افضل جودة وسعر لنيل هذه الثقة والحفاظ عليها.",
-    "Professional Team": "فريق عمل من المحترفين",
-    "Support Center": "دعم فني",
-    "Periodically Updates": "تحديثات بأستمرار",
-    "High Quality, With Low Price": "افضل جودة, واقل سعر",
-    "Our Softwares Supporting Many Languages": "برامجنا تدعم اكثر من لغة",
-    "Attractive Offers For Companies": "عروض مميزة للشركات",
-    "Different Packages For Individuals": "باقات مختلفة للأفراد",
-    "Affiliate System": "التسويق بالعمولة",
-    "Our Clients": "عملائنا",
-    "Developed": "برامج مطورة",
-    "Our Projects": "مشاريعنا",
-    "World Data": "بيانات العالم",
-    "Videos": "الفيديوهات",
-    "Our Tutorials": "شروحات برامجنا",
-    "Our Products": "منتجاتنا",
-    "Our Latest Projects": "اخر مشاريعنا",
-    "300+ Marketing tools": "اكثر من 300 اداة تسويق",
-    "Hercules Whatsapp Sender": "هركليز ارسال الواتساب",
-    "Marketing using whatsapp": "التسويق عبر الواتساب",
-    "Hercules Mailer Sender": "هركليز ارسال البريدالالكتروني",
-    "Send Emails to your clients easily": "ارسل لعملائك عبر البريد بكل سهولة",
-    "Hercules OLX Extractor": "هركليز سحب بيانات من اولكس",
-    "Extract fresh ads from olx": "استخراج بيانات حديثة من اولكس",
-    "Hercules Yellow Pages": "هركليز سحب بيانات من يلوبيدجز",
-    "Collect companies in seconds": "جمع بيانات الشركات فى ثواني",
-    "To view more products": "للمزيد من منتجاتنا",
-    "Individuals Memberships": "عضويات الافراد",
-    "Bronze": "البرونزي",
-    "Silver": "الفضي",
-    "GOLD / VIP": "الذهبي / VIP",
-    "3 Months membership, and all access for the website and desktop-app.": "عضوية 3 شهور, صلاحية استخدام برنامج سطح المكتب والموقع الالكتروني.",
-    "6 Months membership, and all access for the website and desktop-app.": "عضوية 6 شهور, صلاحية استخدام برنامج سطح المكتب والموقع الالكتروني.",
-    "1 Year membership, and all access for the website and desktop-app.": "عضوية سنة, صلاحية استخدام برنامج سطح المكتب والموقع الالكتروني.",
-    "EGP": "جنيه مصري",
-    "Months": "شهور",
-    "Year": "سنة",
-    "Serial": "نسخة",
-    "Points": "نقاط",
-    "Website Tools": "ادوات الموقع",
-    "E-Marketing App 300+ Tools": "برنامج التسويق الالكتروني 300 اداة",
-    "206M Data from facebook": "بيانات مستخدمين الفيسبوك عددها 206 مليون",
-    "Everyday Support": "دعم فني يومي",
-    "Choose this plan": "اختر هذه العضوية",
-    "Are you asking for companies packages?": "هل تريد الاستفسار عن باقات الشركات؟",
-    "We offer multi-serial users and bulk points for companies": "نحن نقدم عروض مميزة للشركات من نسخ متعددة للمستخدمين ونقاط كثيرة غير محدودة",
-    "Asked Question": "طرح سؤال",
-    "Frequently Ask Question": "الاسئلة الشائعة",
-    "Can you give me an overview of Hercules Projects?": "هل يمكنكم ان تعطوني معلومات اكثر عن مشاريع هركليز؟",
-    "Hercules Projects is an Egyptian company specialized in the manufacture and development of software applications, launched in 2018, based in Egypt and consists of a team of Egyptian entrepreneurs.": "هركليز للمشاريع هي شركة مصرية متخصصة في تصنيع وتطوير تطبيقات البرمجيات ، تم إطلاقها في عام 2018 ، ومقرها مصر وتتكون من فريق من رواد الأعمال المصريين.",
-    "What are the products and services offered?": "ما هي المنتجات والخدمات اللتي تقدموها؟",
-    "The products that we provide such as E-marketing programs, also we implement special programs for individuals and companies on demand, and the services we provide such as encryption and protection service for desktop programs with the latest encryption programs used.": "المنتجات التي نقدمها مثل برامج التسويق الإلكتروني ، كما نقوم بتنفيذ برامج خاصة للأفراد والشركات عند الطلب ، والخدمات التي نقدمها مثل خدمة التشفير والحماية لبرامج سطح المكتب بأحدث برامج التشفير المستخدمة. يمكنك أيضًا التعرف والاطلاع على منتجاتنا وخدماتنا الحالية عبر موقعنا الالكتروني الخاص أو الاتصال بنا على صفحة الفيسبوك و الواتساب (+0201021019322).",
-    "You can also check our current products and services via our website or contact us on": "يمكنك أيضًا التعرف والاطلاع على منتجاتنا وخدماتنا الحالية عبر موقعنا الالكتروني الخاص أو الاتصال بنا على",
-    "Facebook page": "صفحة الفيسبوك",
-    "and WhatsApp": "والواتساب",
-    "What are the advantages that motivate me to buy any of your programs?": "ما هي المزايا التي تحفزني على شراء أي من برامجكم؟",
-    "We offer the best quality and lowest price, different memberships suitable for everyone, full explanations of all our programs in detail, continuous workshops, continuous updates, technical support all the day, customer support and assistance in all ways, and give our customers gifts, contests and surprises.": "نقدم أفضل جودة وأقل سعر ، وعضويات مختلفة تناسب الجميع ، وشروحات كاملة لجميع برامجنا بالتفصيل ، وورش عمل مستمرة ، وتحديثات مستمرة ، ودعم فني طوال اليوم ، ودعم العملاء ومساعدتهم بكل الطرق ، وإعطاء عملائنا هدايا ، مسابقات ومفاجآت.",
-    "How can I purchase your software and payment methods?": "كيف يمكنني شراء اي من برامجكم وطرق الدفع?",
-    "You can get any of our programs by contact with us on Facebook page or via WhatsApp only, and we have more than one payment method inside or outside Egypt (Paypal- Western Union - Bank Transfer - Vodafone Cash).": "يمكنك الحصول على أي من برامجنا من خلال التواصل معنا على صفحة الفيسبوك أو عبر الواتساب فقط ، ولدينا أكثر من طريقة دفع داخل مصر أو خارجها (باي بال - ويسترن يونيون - حوالة بنكية - فودافون كاش).",
-    "I want to know more details about your programs and the duration of the subscription?": "أرغب في معرفة المزيد من التفاصيل حول برامجكم ومدة الاشتراك?",
-    "Contact with us on Facebook page or WhatsApp, and you will be provided with all the details and the duration of subscriptions.": "تواصل معنا على صفحة الفيسبوك أو الواتساب ، وسيتم تزويدك بكافة التفاصيل ومدة الاشتراكات.",
-    "Are there special offers for companies?": "هل توجد عروض خاصة للشركات?",
-    "Yes, of course, there are special offers for companies and support in prices and subscriptions": "نعم طبعا يوجد عروض خاصة للشركات ودعم في الاسعار والاشتراكات",
-    "Is there a free trial period for the programs?": "هل توجد فترة تجريبية مجانية للبرامج?",
-    "There is no free trial period, you can see explanations of the program or enter directly with us on anydesk or teamviewer and try the program by yourself.": "لا توجد فترة تجريبية مجانية ، يمكنك الاطلاع على شروحات البرنامج أوالدخول مباشرة معنا على anydesk أو teamviewer للدخول معاكم على الجها الخاص بكم عن بعد وجرب البرنامج بنفسك.",
-    "Do you have an affiliate marketing system?": "هل لديكم نظام التسويق بالعمولة?",
-    "Yes, we are pleased that you can join us and become an affiliate marketer, but you must first get the program until you master it well and then be able to market it in return for a percentage on each sale.": "نعم ، يسعدنا أنه يمكنك الانضمام إلينا وأن تصبح مسوقًا تابعًا ، ولكن يجب عليك أولاً الحصول على البرنامج حتى تتقنه جيدًا ثم تتمكن من تسويقه مقابل نسبة مئوية على كل عملية بيع..",
-    "Can I be your representative in my country?": "هل يمكنني أن أكون وكيل لكم وأمثلكم فى دولتي?",
-    "Yes, we are honored to join us, contact us at any time.": "نعم ، ستشرفنا بالانضمام إلينا ، تواصل معنا في أي وقت.",
-    "Testimonial": "التوصيات",
-    "What Our Clients Say": "ما يقوله عنا عملائنا وعن تجربتهم",
-    "Facebook Review": "اراء الفيسبوك",
-    "Need Help?": "هل تحتاج للمساعدة?",
-    "Social": ",وسائل التواصل الاجتماعي",
-    "Youtube Channel": "قناة اليوتيوب",
-    "Whatsapp": "الواتساب",
-    "Best digital marketing software, powerful & high quality service, 24/7 Free Support.": "أفضل شركة تطوير برمجيات وبرامج تسويق رقمي, خدمة عالية الجودة والسعر المنخفض ، الدعم الفني كل يوم..",
-    "Contact": "وسائل التواصل معنا",
-    "Phone": "الهاتف",
-    "Address": "الموقع",
-    "291 st, New Maadi, Cairo, Egypt": "شارع 291المعادي الجديدة, القاهرة, مصر.",
-    "2020 Hercules. All Rights Reserved by": "جميع الحقوق محفوظة لهركليز 2020.",
-    "Terms & Conditions": "الشروط & الاحكام",
-    "Privacy Policy": "سياسة خاصة"
+	"Products": "برامجنا",
+	"Watch Video": "شاهد الفيديو",
+	"Client Area": "منطقة العملاء",
+	"Home": "الرئيسية",
+	"About Us": "من نحن",
+	"Our Features": "المميزات",
+	"Pricing": "الاسعار",
+	"FAQ": "الأسئلةالشائعة",
+	"Contact Us": "تواصل معنا",
+	"Explore Our Services": "تعرف على خدماتنا",
+	"Marketing Softwares": "برامج التسويق",
+	"We specialize in programming marketing tools on all social media platforms and we have very great experience in dealing with these platforms, using the latest technologies in the tools.": "نحن متخصصون في برمجة أدوات التسويق على جميع منصات التواصل الاجتماعي ولدينا خبرة كبيرة جدًا في التعامل مع هذه المنصات ، باستخدام أحدث التقنيات في الأدوات.",
+	"Build Softwares": "تنفيذ البرامج",
+	"We develop custom softwares and technology uses the latest programming frameworks to develop desktop softwares which enables us to implement powerful softwares.": "نقوم بتطوير برامج وتقنيات مخصصة تستخدم أحدث مكتبات البرمجة لتطوير برامج سطح المكتب التي تمكننا من تنفيذ برامج قوية.",
+	"Obfuscate .NET": "تشفير وحماية البرامج",
+	"Keep Decompilers At Bay Forever With Our Rock-Solid Multi-Purpose Obfuscation Engines, Prevent external and internal modifications using anti tampering techniques.": "نقدم خدمة تشفير وحماية البرامج من التكريك بأستخدام أفضل البرامج والطرق وحماية التعديل علي البرامج او كسر السيريال او الدخول الي البرنامج او سرقة الأكواد.",
+	"We strive to satisfy our customers": "ندرك أن الثقة لا تقدر بثمن لذلك نسعى جاهدين لأرضاء عملائنا",
+	"Our most important goal is to provide the best services to our customers.": "أهم اهدافنا هو تقديم افضل جودة وسعر لنيل هذه الثقة والحفاظ عليها.",
+	"Professional Team": "فريق عمل من المحترفين",
+	"Support Center": "دعم فني",
+	"Periodically Updates": "تحديثات بأستمرار",
+	"High Quality, With Low Price": "افضل جودة, واقل سعر",
+	"Our Softwares Supporting Many Languages": "برامجنا تدعم اكثر من لغة",
+	"Attractive Offers For Companies": "عروض مميزة للشركات",
+	"Different Packages For Individuals": "باقات مختلفة للأفراد",
+	"Affiliate System": "التسويق بالعمولة",
+	"Our Clients": "عملائنا",
+	"Developed": "برامج مطورة",
+	"Our Projects": "مشاريعنا",
+	"World Data": "بيانات العالم",
+	"Videos": "الفيديوهات",
+	"Our Tutorials": "شروحات برامجنا",
+	"Our Products": "مشاريعنا",
+	"Our Latest Projects": "اخر مشاريعنا",
+	"300+ Marketing tools": "اكثر من 300 اداة تسويق",
+	"Hercules Whatsapp Sender": "هركليز ارسال الواتساب",
+	"Marketing using whatsapp": "التسويق عبر الواتساب",
+	"Hercules Mailer Sender": "هركليز ارسال البريدالالكتروني",
+	"Send Emails to your clients easily": "ارسل لعملائك عبر البريد بكل سهولة",
+	"Hercules OLX Extractor": "هركليز سحب بيانات من اولكس",
+	"Extract fresh ads from olx": "استخراج بيانات حديثة من اولكس",
+	"Hercules Yellow Pages": "هركليز سحب بيانات من يلوبيدجز",
+	"Collect companies in seconds": "جمع بيانات الشركات فى ثواني",
+	"To view more products": "للمزيد من منتجاتنا",
+	"Individuals Memberships": "عضويات الافراد",
+	"Bronze": "البرونزي",
+	"Silver": "الفضي",
+	"GOLD / VIP": "الذهبي / VIP",
+	"3 Months membership, and all access for the website and desktop-app.": "عضوية 3 شهور, صلاحية استخدام برنامج سطح المكتب والموقع الالكتروني.",
+	"6 Months membership, and all access for the website and desktop-app.": "عضوية 6 شهور, صلاحية استخدام برنامج سطح المكتب والموقع الالكتروني.",
+	"1 Year membership, and all access for the website and desktop-app.": "عضوية سنة, صلاحية استخدام برنامج سطح المكتب والموقع الالكتروني.",
+	"EGP": "ج.م",
+	"Months": "شهور",
+	"Year": "سنة",
+	"Serial": "نسخة",
+	"Points": "نقاط",
+	"Website Tools": "ادوات الموقع",
+	"E-Marketing App 300+ Tools": "برنامج التسويق الالكتروني 300 اداة",
+	"206M Data from facebook": "بيانات مستخدمين الفيسبوك عددها 206 مليون",
+	"Everyday Support": "دعم فني يومي",
+	"Choose this plan": "اختر هذه العضوية",
+	"Are you asking for companies packages?": "هل تريد الاستفسار عن باقات الشركات؟",
+	"We offer multi-serial users and bulk points for companies": "نحن نقدم عروض مميزة للشركات من نسخ متعددة للمستخدمين ونقاط كثيرة غير محدودة",
+	"Asked Question": "طرح سؤال",
+	"Frequently Ask Question": "الاسئلة الشائعة",
+	"Can you give me an overview of Hercules Projects?": "هل يمكنكم ان تعطوني معلومات اكثر عن مشاريع هركليز؟",
+	"Hercules Projects is an Egyptian company specialized in the manufacture and development of software applications, launched in 2018, based in Egypt and consists of a team of Egyptian entrepreneurs.": "هركليز للمشاريع هي شركة مصرية متخصصة في تصنيع وتطوير تطبيقات البرمجيات ، تم إطلاقها في عام 2018 ، ومقرها مصر وتتكون من فريق من رواد الأعمال المصريين.",
+	"What are the products and services offered?": "ما هي المنتجات والخدمات اللتي تقدموها؟",
+	"The products that we provide such as E-marketing programs, also we implement special programs for individuals and companies on demand, and the services we provide such as encryption and protection service for desktop programs with the latest encryption programs used.": "المنتجات التي نقدمها مثل برامج التسويق الإلكتروني ، كما نقوم بتنفيذ برامج خاصة للأفراد والشركات عند الطلب ، والخدمات التي نقدمها مثل خدمة التشفير والحماية لبرامج سطح المكتب بأحدث برامج التشفير المستخدمة. يمكنك أيضًا التعرف والاطلاع على منتجاتنا وخدماتنا الحالية عبر موقعنا الالكتروني الخاص أو الاتصال بنا على صفحة الفيسبوك و الواتساب (+0201021019322).",
+	"You can also check our current products and services via our website or contact us on": "يمكنك أيضًا التعرف والاطلاع على منتجاتنا وخدماتنا الحالية عبر موقعنا الالكتروني الخاص أو الاتصال بنا على",
+	"Facebook page": "صفحة الفيسبوك",
+	"and WhatsApp": "والواتساب",
+	"What are the advantages that motivate me to buy any of your programs?": "ما هي المزايا التي تحفزني على شراء أي من برامجكم؟",
+	"We offer the best quality and lowest price, different memberships suitable for everyone, full explanations of all our programs in detail, continuous workshops, continuous updates, technical support all the day, customer support and assistance in all ways, and give our customers gifts, contests and surprises.": "نقدم أفضل جودة وأقل سعر ، وعضويات مختلفة تناسب الجميع ، وشروحات كاملة لجميع برامجنا بالتفصيل ، وورش عمل مستمرة ، وتحديثات مستمرة ، ودعم فني طوال اليوم ، ودعم العملاء ومساعدتهم بكل الطرق ، وإعطاء عملائنا هدايا ، مسابقات ومفاجآت.",
+	"How can I purchase your software and payment methods?": "كيف يمكنني شراء اي من برامجكم وطرق الدفع؟",
+	"You can get any of our programs by contact with us on Facebook page or via WhatsApp only, and we have more than one payment method inside or outside Egypt (Paypal- Western Union - Bank Transfer - Vodafone Cash).": "يمكنك الحصول على أي من برامجنا من خلال التواصل معنا على صفحة الفيسبوك أو عبر الواتساب فقط ، ولدينا أكثر من طريقة دفع داخل مصر أو خارجها (باي بال - ويسترن يونيون - حوالة بنكية - فودافون كاش).",
+	"I want to know more details about your programs and the duration of the subscription?": "أرغب في معرفة المزيد من التفاصيل حول برامجكم ومدة الاشتراك؟",
+	"Contact with us on Facebook page or WhatsApp, and you will be provided with all the details and the duration of subscriptions.": "تواصل معنا على صفحة الفيسبوك أو الواتساب ، وسيتم تزويدك بكافة التفاصيل ومدة الاشتراكات.",
+	"Are there special offers for companies?": "هل توجد عروض خاصة للشركات؟",
+	"Yes, of course, there are special offers for companies and support in prices and subscriptions": "نعم طبعا يوجد عروض خاصة للشركات ودعم في الاسعار والاشتراكات",
+	"Is there a free trial period for the programs?": "هل توجد فترة تجريبية مجانية للبرامج؟",
+	"There is no free trial period, you can see explanations of the program or enter directly with us on anydesk or teamviewer and try the program by yourself.": "لا توجد فترة تجريبية مجانية ، يمكنك الاطلاع على شروحات البرنامج أوالدخول مباشرة معنا على anydesk أو teamviewer للدخول معاكم على الجها الخاص بكم عن بعد وجرب البرنامج بنفسك.",
+	"Do you have an affiliate marketing system?": "هل لديكم نظام التسويق بالعمولة؟",
+	"Yes, we are pleased that you can join us and become an affiliate marketer, but you must first get the program until you master it well and then be able to market it in return for a percentage on each sale.": "نعم ، يسعدنا أنه يمكنك الانضمام إلينا وأن تصبح مسوقًا تابعًا ، ولكن يجب عليك أولاً الحصول على البرنامج حتى تتقنه جيدًا ثم تتمكن من تسويقه مقابل نسبة مئوية على كل عملية بيع..",
+	"Can I be your representative in my country?": "هل يمكنني أن أكون وكيل لكم وأمثلكم فى دولتي؟",
+	"Yes, we are honored to join us, contact us at any time.": "نعم ، ستشرفنا بالانضمام إلينا ، تواصل معنا في أي وقت.",
+	"Testimonial": "التوصيات",
+	"What Our Clients Say": "ما يقوله عنا عملائنا وعن تجربتهم",
+	"Facebook Review": "اراء الفيسبوك",
+	"Need Help?": "هل تحتاج للمساعدة؟",
+	"Social": ",وسائل التواصل الاجتماعي",
+	"Youtube Channel": "قناة اليوتيوب",
+	"Whatsapp": "الواتساب",
+	"Best digital marketing software, powerful & high quality service, 24/7 Free Support.": "أفضل شركة تطوير برمجيات وبرامج تسويق رقمي, خدمة عالية الجودة والسعر المنخفض ، الدعم الفني كل يوم.",
+	"Contact": "وسائل التواصل معنا",
+	"Phone": "الهاتف",
+	"Address": "الموقع",
+	"291 st, New Maadi, Cairo, Egypt": "شارع 291 المعادي الجديدة, القاهرة, مصر.",
+	"2020 Hercules. All Rights Reserved by": "جميع الحقوق محفوظة لهركليز 2020.",
+	"Terms & Conditions": "الشروط & الاحكام",
+	"Privacy Policy": "سياسة الخصوصية"
 }
