--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -299,5 +299,60 @@
 	"291 st, New Maadi, Cairo, Egypt": "291 st, New Maadi, Cairo, Egypt",
 	"2020 Hercules. All Rights Reserved by": "2020 Hercules. All Rights Reserved by",
 	"Terms & Conditions": "Terms & Conditions",
-	"Privacy Policy": "Privacy Policy"
+    "Privacy Policy": "Privacy Policy",
+    "Herclues": "Hercules",
+    "Data Area": "Data Area",
+    "Purchase Points": "Purchase Points",
+    "Facebook": "Facebook",
+    "Soon": "Soon",
+    "SEO": "SEO",
+    "Welcome to your Hercules application!": "Welcome to your Hercules application!",
+    "Hercules is a software for social marketing.": "Hercules is a software for social marketing.",
+    "Hercules WhatsApp Part 1": "Hercules WhatsApp Part 1",
+    "Hercules WhatsApp Part 2": "Hercules WhatsApp Part 2",
+    "Clients": "Facebook Target",
+    "Information for upload file": "Information for upload file",
+    "After upload your file you have to wait for": "After upload your file you have to wait for",
+    "5 min": "5 min",
+    "records": "records",
+    "Extract Data": "Extract Data",
+    "Get In Action": "Get In Action",
+    "You can find Facebook accounts by add (IDs) in this Input": "You can find Facebook accounts by add (IDs) in this Input",
+    "Ops, You have an error": "Ops, You have an error",
+    "File was uploaded to server successfully": "File was uploaded to server successfully",
+    "Please be patient and reload the page within a minute or 5 minutes maximum.": "Please be patient and reload the page within a minute or 5 minutes maximum.",
+    "File count": "File count",
+    "Result": "Result",
+    "Status": "Status",
+    "Loading...": "Loading...",
+    "Completed": "Completed",
+    "Processing": "Processing",
+    "We are working on export your file": "We are working on export your file",
+    "We will send you an email, keep waiting until we finish.": "We will send you an email, keep waiting until we finish.",
+    "Please purchase points": "Please purchase points",
+    "your point": "your point",
+    "You check you max and min records": "Please check the file count, minimum is 100 ID and maximum is 20.000 ID",
+    "You didn't have points enough": "You didn't have points enough.",
+    "Count": "Count",
+    "File": "File",
+    "Created At": "Created At",
+    "Download": "Download",
+    "Purchase": "Purchase",
+    "Redeem Code": "Redeem Code",
+    "Redeem code, or git card from Hercules": "Redeem code, or get card from Hercules",
+    "Change Log": "Change Log",
+    "License": "License",
+    "Version": "Version",
+    "Terms and Conditions": "Terms and Conditions",
+    "Extract By File": "Extract By File",
+    "Redeem Card": "Redeem Card",
+    "Export facebook IDs": "Export facebook IDs",
+    "Finish up your account": "Finish up your account",
+    "Create your first excel file": "Create your first excel file",
+    "Upgrade your plan": "Upgrade your plan",
+    "Upgrade your plan to lift restrictions and enjoy the most out of managing your services.": "Upgrade your plan to lift restrictions and enjoy the most out of managing your services.",
+    "Upgrade plan": "Upgrade plan",
+    "Find Facebook Data": "Find Facebook Data",
+    "Redeem points": "Redeem points",
+    "Categories": "Categories"
 }
