--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -333,6 +333,7 @@
     "your point": "ونقاطك",
     "You check you max and min records": "من فضلك تحقق من حجم الملف، أقل شئ للرفع هو 100 ID وأقصي شئ للرفع هو 20.000 ID",
     "You didn't have points enough": "ليس دليك نقاط كافية",
+    "Sorry, you've reached your maximum limit of data.": "عذرًا ، لقد وصلت إلى الحد الأقصى من البيانات.",
     "Count": "العدد",
     "File": "رابط الملف",
     "Created At": "تاريخ الأنشاء",
