--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -333,6 +333,7 @@
     "your point": "your point",
     "You check you max and min records": "Please check the file count, minimum is 100 ID and maximum is 20.000 ID",
     "You didn't have points enough": "You didn't have points enough.",
+    "Sorry, you've reached your maximum limit of data.": "Sorry, you've reached your maximum limit of data.",
     "Count": "Count",
     "File": "File",
     "Created At": "Created At",
